@@ -1,0 +1,105 @@
+<?xml version="1.0" encoding='UTF-8'?>
+<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.3//EN"
+	"http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd">
+
+<refentry id="pam_permit">
+
+  <refmeta>
+    <refentrytitle>pam_permit</refentrytitle>
+    <manvolnum>8</manvolnum>
+    <refmiscinfo class="sectdesc">Linux-PAM Manual</refmiscinfo>
+  </refmeta>
+
+  <refnamediv id="pam_permit-name">
+    <refname>pam_permit</refname>
+    <refpurpose>The promiscuous module</refpurpose>
+  </refnamediv>
+
+  <refsynopsisdiv>
+    <cmdsynopsis id="pam_permit-cmdsynopsis">
+      <command>pam_permit.so</command>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsect1 id="pam_permit-description">
+
+    <title>DESCRIPTION</title>
+
+    <para>
+      pam_permit is a PAM module that always permit access. It does
+      nothing else.
+    </para>
+    <para>
+      In the case of authentication, the user's name will be set to
+      <emphasis>nobody</emphasis> if the application didn't set one.
+      Many applications and PAM modules become confused if this name
+      is unknown.
+    </para>
+    <para>
+      This module is very dangerous. It should be used with extreme
+      caution.
+    </para>
+  </refsect1>
+
+  <refsect1 id="pam_permit-options">
+
+    <title>OPTIONS</title>
+    <para> This module does not recognice any options.</para>
+  </refsect1>
+
+  <refsect1 id="pam_permit-services">
+    <title>MODULE SERVICES PROVIDED</title>
+    <para>
+      The services <option>auth</option>, <option>account</option>,
+      <option>password</option> and <option>session</option> are supported.
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_permit-return_values'>
+    <title>RETURN VALUES</title>
+    <variablelist>
+      <varlistentry>
+        <term>PAM_SUCCESS</term>
+        <listitem>
+          <para>
+            This module always returns this value.
+          </para>
+        </listitem>
+      </varlistentry>
+    </variablelist>
+     </refsect1>
+
+  <refsect1 id='pam_permit-examples'>
+    <title>EXAMPLES</title>
+    <para>
+      Add this line to your other login entries to disable account
+      management, but continue to permit users to log in.
+      <programlisting>
+account  required  pam_permit.so
+      </programlisting>
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_permit-see_also'>
+    <title>SEE ALSO</title>
+    <para>
+      <citerefentry>
+	<refentrytitle>pam.conf</refentrytitle><manvolnum>5</manvolnum>
+      </citerefentry>,
+      <citerefentry>
+	<refentrytitle>pam.d</refentrytitle><manvolnum>8</manvolnum>
+      </citerefentry>,
+      <citerefentry>
+	<refentrytitle>pam</refentrytitle><manvolnum>8</manvolnum>
+      </citerefentry>
+    </para>
+  </refsect1>
+
+  <refsect1 id='pam_permit-author'>
+    <title>AUTHOR</title>
+      <para>
+        pam_permit was written by Andrew G. Morgan, &lt;morgan@kernel.org&gt;.
+      </para>
+  </refsect1>
+
+</refentry>
